--- a/index.html
+++ b/index.html
@@ -18,10 +18,11 @@
 </header>
 <main>
 	<div id="banner">
+		<img src="assets/images/arrow_left.png" class="arrow arrow_left" alt="arrow left">
+		<img src="assets/images/arrow_right.png" class="arrow arrow_right"  alt="arrow right">
 		<img class="banner-img" src="./assets/images/slideshow/slide1.jpg" alt="Banner Print-it">
 		<p>Impressions tous formats <span>en boutique et en ligne</span></p>
-		<div class="dots">
-		</div>
+		<div class="dots"></div>
 	</div>
 	<section id="about-us" class="container">
 		<div>
